# Composite-memory-MCP-server

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  DECISIONS.md  LICENSE  MANIFEST.in  Makefile  PLAN.md  README.md  alembic.ini  pyproject.toml  server.json
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_fts5.py  0003_add_beliefs.py
contracts/: audit.schema.json  common.schema.json  get_belief.schema.json  get_context.schema.json  graph_search.schema.json  learn.schema.json  ping.schema.json  reflect.schema.json  remember.schema.json  resolve_conflict.schema.json  route.schema.json  search.schema.json  semantic_search.schema.json  set_belief.schema.json  validate_schemas.py
docs/: ADR.md  AGENT_DISCOVERY.md  DIRECTORY_SUBMISSIONS.md  INTEGRATION.md  QUICKSTART.md  USAGE.md  agent-spec.md  architecture.md  comparative-metrics.md  drift-matrix.md  longmemeval-harness.md  metrics.md  technical-design.md  v0.6-spec.md
migrations/: env.py
migrations/versions/: 5d4e3c2b1a0f_add_outbox_entries_table.py  70e6afc8d15d_initial_schema.py
scripts/: install-plugin.sh
specs/: card-001-belief-model.md  card-001-lancedb.md  card-001-native-provider.md  card-001-review.md  card-001-skeleton.md  card-001-ternary-relation.md  card-002-cli-docs.md  card-002-models.md  card-002-reflect.md  card-003-learn-bridge.md  card-003-sqlite.md  card-004-conflict-resolution.md  card-004-get-context.md  card-005-integration-docs.md  card-005-search.md
src/memory_server/: __init__.py  admission.py  cli.py  server.py
src/memory_server/api/: __init__.py  bulk_import.py  get_context.py  learn.py  reflect.py  remember.py  search.py
src/memory_server/benchmarks/: __init__.py  longmemeval.py
src/memory_server/evaluation/: __init__.py  auditor.py  confidence.py  decay.py  metrics.py  relation.py  validator.py
src/memory_server/extractors/: __init__.py  belief_extractor.py  decision_extractor.py  fact_extractor.py  skill_extractor.py
src/memory_server/models/: __init__.py  belief.py  decision.py  entity.py  evidence.py  fact.py  receipt.py  skill.py
src/memory_server/plugins/: __init__.py
src/memory_server/plugins/hermes/: __init__.py  config.py  provider.py  writer.py
src/memory_server/providers/: __init__.py  embedding_provider.py  graph_provider.py  lancedb_provider.py  qdrant_provider.py  sqlite_provider.py
src/memory_server/router/: __init__.py  embedding_router.py  graph_router.py  hybrid_router.py  ranking.py  rules.py
src/memory_server/services/: __init__.py  ingestion_service.py
storage/: __init__.py  base.py  outbox.py  outbox_worker.py
storage/adapters/: __init__.py  legacy_provider.py
storage/models/: __init__.py  belief.py  decision.py  entity.py  fact.py  lifecycle.py  receipt.py  skill.py
storage/repositories/: __init__.py  belief_repo.py  decision_repo.py  evidence_repo.py  fact_repo.py  lifecycle_repo.py  receipt_repo.py  skill_repo.py
tests/: _hermes_plugin_stubs.py  test_auditor.py  test_belief_bridge.py  test_belief_conflict.py  test_belief_integration.py  test_belief_lifecycle.py  test_belief_models.py  test_belief_provider.py  test_belief_reflect.py  test_belief_repo.py  test_belief_tools.py  test_benchmarks.py  test_comparative.py  test_confidence.py  test_decay.py  test_decision_extractor.py  test_embedding_provider.py  test_extractor_integration.py  test_fact_extractor.py  test_get_context.py  test_graph_integration.py  test_graph_provider.py  test_graph_router.py  test_graph_search.py  test_hermes_plugin_registration.py  test_hermes_provider.py  test_hook.py  test_hybrid_router.py  test_integration.py  test_lancedb_provider.py  test_learn.py  test_loadtest.py  test_longmemeval_harness.py  test_memory_admission.py  test_models.py  test_observability.py  test_outbox.py  test_phase6_fts5.py  test_ping.py  test_qdrant_provider.py  (+12 more)
