[project]
name = "composite-memory-mcp-server"
version = "0.1.0"
description = "Independent MCP memory service for AI agents"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.0.0"]
graph = ["neo4j>=5.0.0"]
git = ["gitpython>=3.0.0"]
hermes = ["ruamel.yaml>=0.18.0"]
sentence = ["sentence-transformers>=3.0.0"]
openai = ["openai>=1.0.0"]
dev = [
    "composite-memory-mcp-server[qdrant,sentence,hermes]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
memory-server = "memory_server.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]

[tool.black]
target-version = ["py312"]

[tool.ruff.format]
quote-style = "double"
