[project]
name = "composite-memory-mcp-server"
version = "0.11.0b1"
description = "Independent MCP memory service for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Shtorm" },
    { name = "FedosIS", email = "fedosis@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "typer>=0.12.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.0.0"]
lancedb = ["lancedb>=0.12.0", "pyarrow>=14.0.0"]
graph = ["neo4j>=5.0.0"]
git = ["gitpython>=3.0.0"]
hermes = ["ruamel.yaml>=0.18.0"]
sentence = ["sentence-transformers>=3.0.0"]
openai = ["openai>=1.0.0"]
dev = [
    "composite-memory-mcp-server[qdrant,lancedb,sentence,hermes]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
memory-server = "memory_server.cli:app"

[project.urls]
Homepage = "https://github.com/fedosis/Composite-memory-MCP-server"
Repository = "https://github.com/fedosis/Composite-memory-MCP-server"
Documentation = "https://github.com/fedosis/Composite-memory-MCP-server/blob/main/README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = [
    "memory_server",
    "memory_server.api",
    "memory_server.benchmarks",
    "memory_server.evaluation",
    "memory_server.extractors",
    "memory_server.models",
    "memory_server.plugins",
    "memory_server.plugins.hermes",
    "memory_server.providers",
    "memory_server.router",
    "memory_server.services",
    "storage",
    "storage.adapters",
    "storage.models",
    "storage.repositories",
]
package-dir = {"memory_server" = "src/memory_server", "storage" = "storage"}

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]

[tool.black]
target-version = ["py311"]

[tool.ruff.format]
quote-style = "double"
